[workspace]
members = [
	"subscriptions",
	"query",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "0.11", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }

foundry-fork-db = "0.11"

revm-primitives = "15.0"
revm = "19.0"

# async
futures-util = "0.3"
tokio = "1.42"

# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"

